--- a/SpaceY.css
+++ b/SpaceY.css
@@ -9,8 +9,29 @@ body {
 /* Style the header */
 .header {
   background-color: #f1f1f1;
-  padding: 20px;
+  padding: 50px;
   text-align: center;
+}
+
+
+/* Style the searchbar */
+#searchbardiv {
+  float:right;
+}
+  #searchbardiv input {
+      height:20px;
+      width:200px;
+      border:none;
+      background-color:#e4e4e4;
+      font-size:0.9em;
+      padding-left:5px;
+      background-image:url("images/magnifyglass.png");
+      background-repeat:no-repeat;
+      background-position:right center;
+  }
+::placeholder {
+  color:black;
+  font-weight:bold;
 }
 
 /* The navbar container */
@@ -35,54 +56,42 @@ body {
   color: black;
 }
 
-/* Create two unequal columns that floats next to each other */
-/* Left column */
-.leftcolumn {   
-  float: left;
-  width: 75%;
+.flex-container-single {
+  display: flex;
+  flex-wrap: nowrap;
+  background-color: DodgerBlue;
+  justify-content: center;
+  margin-left: 40px;
+  margin-right: 40px;
 }
 
-/* Right column */
-.rightcolumn {
-  float: left;
-  width: 25%;
+.flex-container-triple {
+  display: flex;
+  flex-wrap: nowrap;
+  background-color: DodgerBlue;
+  justify-content: center;
+  margin-left: 40px;
+  margin-right: 40px;
+}
+
+.flex-container-single > div {
   background-color: #f1f1f1;
-  padding-left: 20px;
+  width: 865px;
+  height: 500px;
+  margin: 10px;
+  text-align: center;
+  line-height: 75px;
+  font-size: 30px;
 }
 
-/* Fake image */
-.fakeimg {
-  background-color: #aaa;
-  width: 100%;
-  padding: 20px;
-}
-
-/* Add a card effect for articles */
-.card {
-  background-color: white;
-  padding: 20px;
-  margin-top: 20px;
-}
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Create three equal columns that floats next to each other */
-.column {
-  float: left;
-  width: 33.33%;
-  padding: 15px;
-}
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
+.flex-container-triple > div {
+  background-color: #f1f1f1;
+  width: 275px;
+  height: 350px;
+  margin: 10px;
+  text-align: center;
+  line-height: 75px;
+  font-size: 30px;
 }
 
 /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
