--- a/SpaceY.css
+++ b/SpaceY.css
@@ -8,11 +8,16 @@ body {
 
 /* Style the header */
 .header {
-  background-color: #f1f1f1;
   padding: 50px;
-  text-align: center;
+  text-align: left;
+  background: url('images/spaceWalkCrop.png');
 }
 
+/* Style the title */
+h1 {
+  background-color: black;
+  color: white;
+}
 
 /* Style the searchbar */
 #searchbardiv {
@@ -43,6 +48,7 @@ body {
 /* Navbar links */
 .topnav a {
   float: left;
+  margin-left: 30px;
   display: block;
   color: #f2f2f2;
   text-align: center;
@@ -59,19 +65,19 @@ body {
 .flex-container-single {
   display: flex;
   flex-wrap: nowrap;
-  background-color: DodgerBlue;
+  background-color: black;
   justify-content: center;
-  margin-left: 40px;
-  margin-right: 40px;
+  margin-left: 30px;
+  margin-right: 30px;
 }
 
 .flex-container-triple {
   display: flex;
   flex-wrap: nowrap;
-  background-color: DodgerBlue;
+  background-color: black;
   justify-content: center;
-  margin-left: 40px;
-  margin-right: 40px;
+  margin-left: 30px;
+  margin-right: 30px;
 }
 
 .flex-container-single > div {
@@ -92,6 +98,14 @@ body {
   text-align: center;
   line-height: 75px;
   font-size: 30px;
+}
+
+/* Style images in flexboxes */
+img {
+  border-top-width: 0;
+  border-right-width: 0;
+  border-bottom-width: 0;
+  border-left-width: 0;
 }
 
 /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
