--- a/SpaceY.css
+++ b/SpaceY.css
@@ -47,7 +47,7 @@ h1 {
 
 /* Navbar links */
 .topnav a {
-  float: left;
+  float: right;
   margin-left: 30px;
   display: block;
   color: #f2f2f2;
@@ -115,8 +115,11 @@ img {
   }
 }
 
-.footer {
-  background-color: #F1F1F1;
-  text-align: center;
-  padding: 10px;
+/* Add a gray background color and some padding to the footer */
+#FooterFrame {
+  background-color: #f2f2f2;
+  padding: 25px;
+  margin-left: 30px;
+  margin-right: 30px;
 }
+
