--- a/SpaceY.css
+++ b/SpaceY.css
@@ -4,6 +4,7 @@
 
 body {
   margin: 0;
+  font-family: Georgia, serif;
 }
 
 /* Style the header */
@@ -17,18 +18,22 @@ body {
 h1 {
   background-color: black;
   color: white;
+  font-family: Georgia, serif;
 }
 
 /* Style the searchbar */
 #searchbardiv {
   float:right;
+  padding: 5px;
 }
   #searchbardiv input {
-      height:20px;
-      width:200px;
+      height:30px;
+      width:300px;
       border:none;
       background-color:#e4e4e4;
+      border-radius: 5px;
       font-size:0.9em;
+      font-family: Georgia, serif;
       padding-left:5px;
       background-image:url("images/magnifyglass.png");
       background-repeat:no-repeat;
@@ -36,31 +41,10 @@ h1 {
   }
 ::placeholder {
   color:black;
+  font-family: Georgia, serif;
   font-weight:bold;
 }
-
-/* The navbar container */
-.topnav {
-  overflow: hidden;
-  background-color: #333;
-}
-
-/* Navbar links */
-.topnav a {
-  float: right;
-  margin-left: 30px;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-/* Links - change color on hover */
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
+ 
 
 .flex-container-single {
   display: flex;
@@ -123,3 +107,65 @@ img {
   margin-right: 30px;
 }
 
+ .imageDescription{
+   float: left;
+ }
+
+ 
+.dropdown {
+  float: right;
+  margin-left: 30px;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  overflow: hidden;
+  position: absolute;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  background-color: #ddd;
+  color: black;  
+  background-color: #ddd;
+}
+
+
+
+ /* Button on launcher image */
+
+ .buttoncontainer {
+  position: relative;
+  width: 100%;
+  max-width: 400px;
+}
+
+.buttoncontainer img {
+  width: 100%;
+  height: auto;
+}
+
+.buttoncontainer .btn {
+  position: absolute;
+  bottom:0%;
+  left: 75%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  background-color: #555;
+  color: white;
+  font-size: 16px;
+  padding: 12px 24px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.buttoncontainer .btn:hover {
+  background-color:grey;
+}
