--- a/SpaceY.css
+++ b/SpaceY.css
@@ -1,34 +1,97 @@
-* {
-  box-sizing: border-box;
+/* Center the loader */
+#loader {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  z-index: 1;
+  width: 180px;
+  height: 180px;
+  margin: -76px 0 0 -76px;
+  background-color: black;
+  border: 16px solid  red;
+  border-radius: 50%;
+  border-top: 16px solid white;
+  -webkit-animation: spin 1s linear infinite;
+  animation: spin 1s linear infinite;
 }
 
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+/* Add animation to "page content" */
+.animate-bottom {
+  position: relative;
+  -webkit-animation-name: animatebottom;
+  -webkit-animation-duration: 0.5s;
+  animation-name: animatebottom;
+  animation-duration: 0.5s
+}
+
+@-webkit-keyframes animatebottom {
+  from { bottom:-100px; opacity:0 } 
+  to { bottom:0px; opacity:1 }
+}
+
+@keyframes animatebottom { 
+  from{ bottom:-100px; opacity:0 } 
+  to{ bottom:0; opacity:1 }
+}
+
+#myDiv {
+  display: none;
+  text-align: center;
+}
+
+
+/* Style the body */
 body {
   margin: 0;
-  font-family: Georgia, serif;
 }
 
 /* Style the header */
 .header {
+  margin-left: 30px;
+  margin-right:30px;
   padding: 50px;
   text-align: left;
   background: url('images/spaceWalkCrop.png');
 }
 
-/* Style the title */
-h1 {
-  background-color: black;
+.pageTitle{
+  font-size:50px;
+  float: left;
+  margin-top:-16px;
   color: white;
-  font-family: Georgia, serif;
+  animation: glow 1s ease-in-out infinite alternate;
+}
+
+@-webkit-keyframes glow {
+  from {
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
+  }
+  
+  to {
+    text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+  }
 }
 
 /* Style the searchbar */
 #searchbardiv {
   float:right;
+  margin-right: 30px;
+  margin-top:15px;
   padding: 5px;
 }
   #searchbardiv input {
       height:30px;
-      width:300px;
+      width:200px;
       border:none;
       background-color:#e4e4e4;
       border-radius: 5px;
@@ -44,52 +107,141 @@ h1 {
   font-family: Georgia, serif;
   font-weight:bold;
 }
- 
 
-.flex-container-single {
-  display: flex;
-  flex-wrap: nowrap;
+/* Navbar container */
+.navbar {
+  overflow: hidden;
   background-color: black;
-  justify-content: center;
+  font-family: Georgia, serif;
+  margin-left: 30px;
+  margin-right:30px;
+}
+
+/* Links inside the navbar */
+.navbar a {
+  float: right;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* The dropdown container */
+.dropdown {
+  float: right;
+  overflow: hidden;
+}
+
+/* Dropdown button */
+.dropdown .dropbtn {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit; /* Important for vertical align on mobile phones */
+  margin: 0; /* Important for vertical align on mobile phones */
+}
+
+/* Add a red background color to navbar links on hover */
+.navbar a:hover, .dropdown:hover .dropbtn {
+  background-color: rgb(187, 5, 75);
+}
+
+/* Dropdown content (hidden by default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+/* Add a grey background color to dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* Large Photo-Article Content */
+.mainContent {
   margin-left: 30px;
   margin-right: 30px;
+  margin-top:15px;
+  background-color: white;
 }
 
-.flex-container-triple {
-  display: flex;
-  flex-wrap: nowrap;
-  background-color: black;
-  justify-content: center;
+/* Three columns side by side */
+.column {
+  float: right;
+  width: 28.56%;
+  margin-bottom: 16px;
+  margin-top: 16px;
   margin-left: 30px;
   margin-right: 30px;
+  padding: 0 0px;
 }
 
-.flex-container-single > div {
-  background-color: #f1f1f1;
-  width: 865px;
-  height: 500px;
-  margin: 10px;
+/* Display the columns below each other instead of side by side on small screens */
+@media screen and (max-width: 650px) {
+  .column {
+    width: 100%;
+    display: block;
+  }
+}
+
+/* Add some shadows to create a card effect */
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+/* Some left and right padding inside the container */
+.container {
+  padding: 0 16px;
+}
+
+/* Clear floats */
+.container::after, .row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.title {
+  color: grey;
+}
+
+.buyButton {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #000;
   text-align: center;
-  line-height: 75px;
-  font-size: 30px;
+  cursor: pointer;
+  width: 100%;
 }
 
-.flex-container-triple > div {
-  background-color: #f1f1f1;
-  width: 275px;
-  height: 350px;
-  margin: 10px;
-  text-align: center;
-  line-height: 75px;
-  font-size: 30px;
-}
-
-/* Style images in flexboxes */
-img {
-  border-top-width: 0;
-  border-right-width: 0;
-  border-bottom-width: 0;
-  border-left-width: 0;
+.buyButton:hover {
+  background-color: #555;
 }
 
 /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
@@ -99,73 +251,75 @@ img {
   }
 }
 
-/* Add a gray background color and some padding to the footer */
-#FooterFrame {
-  background-color: #f2f2f2;
-  padding: 25px;
-  margin-left: 30px;
-  margin-right: 30px;
+img:hover {
+  /* Start the shake animation and make the animation last for 0.5 seconds */
+  animation: shake 0.5s;
+
+  /* When the animation is finished, start again */
+  animation-iteration-count: infinite;
 }
 
- .imageDescription{
-   float: left;
- }
-
- 
-.dropdown {
-  float: right;
-  margin-left: 30px;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  overflow: hidden;
-  position: absolute;
-  display: inline-block;
+@keyframes shake {
+  0% { transform: translate(1px, 1px) rotate(0deg); }
+  10% { transform: translate(-1px, -2px) rotate(-1deg); }
+  20% { transform: translate(-3px, 0px) rotate(1deg); }
+  30% { transform: translate(3px, 2px) rotate(0deg); }
+  40% { transform: translate(1px, -1px) rotate(1deg); }
+  50% { transform: translate(-1px, 2px) rotate(-1deg); }
+  60% { transform: translate(-3px, 1px) rotate(0deg); }
+  70% { transform: translate(3px, 1px) rotate(-1deg); }
+  80% { transform: translate(-1px, -1px) rotate(1deg); }
+  90% { transform: translate(1px, 2px) rotate(0deg); }
+  100% { transform: translate(1px, -2px) rotate(-1deg); }
 }
 
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  background-color: #ddd;
-  color: black;  
-  background-color: #ddd;
+/* Content */
+.content {
+  background-color: white;
+  margin-right:30px;
+  margin-left:30px;
+  margin-top:10px;
+  margin-bottom:10px;
 }
 
+h3 { text-align: left; }
 
-
- /* Button on launcher image */
-
- .buttoncontainer {
+/* Container needed to position the button. Adjust the width as needed */
+.bigImContainer {
   position: relative;
   width: 100%;
-  max-width: 400px;
 }
 
-.buttoncontainer img {
-  width: 100%;
+/* Make the image responsive */
+.bigImContainer img {
   height: auto;
+  width:100%;
 }
 
-.buttoncontainer .btn {
+/* Style the button and place it in the middle of the container/image */
+.bigImContainer .bigImBtn {
   position: absolute;
-  bottom:0%;
-  left: 75%;
+  top: 50%;
+  left: 50%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
-  background-color: #555;
+  background-color: red;
   color: white;
   font-size: 16px;
   padding: 12px 24px;
   border: none;
   cursor: pointer;
   border-radius: 5px;
-  text-align: center;
 }
 
-.buttoncontainer .btn:hover {
-  background-color:grey;
+.bigImContainer .bigImBtn:hover {
+  background-color: black;
+}
+
+/* Add a gray background color and some padding to the footer */
+#FooterFrame {
+  background-color: #f2f2f2;
+  padding: 25px;
+  margin-left: 30px;
+  margin-right: 30px;
 }
