--- a/SpaceY.css
+++ b/SpaceY.css
@@ -4,15 +4,22 @@
 
 body {
   margin: 0;
+  font-family: Georgia, serif;
 }
 
 /* Style the header */
 .header {
-  background-color: #f1f1f1;
   padding: 50px;
-  text-align: center;
+  text-align: left;
+  background: url('images/Moon.jpg');
 }
 
+/* Style the title */
+h1 {
+  background-color: black;
+  color: white;
+  font-family: Georgia, serif;
+}
 
 /* Style the searchbar */
 #searchbardiv {
@@ -101,8 +108,70 @@ body {
   }
 }
 
-.footer {
-  background-color: #F1F1F1;
-  text-align: center;
+/* Add a gray background color and some padding to the footer */
+#FooterFrame {
+  background-color: #f2f2f2;
   padding: 10px;
+  margin-left: 25px;
+  margin-right: 25px;
+}
+
+ .imageDescription{
+   float: left;
+ }
+
+ 
+.dropdown {
+  float: right;
+  margin-left: 30px;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  overflow: hidden;
+  position: absolute;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  background-color: #ddd;
+  color: black;  
+  background-color: #ddd;
+}
+
+/* Button on launcher image */
+
+.buttoncontainer {
+  position: relative;
+ 
+}
+
+.buttoncontainer img {
+  width: 100%;
+  height: auto;
+}
+
+.buttoncontainer .btn {
+  position: absolute;
+  bottom:0%;
+  left: 87%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  background-color: #555;
+  color: white;
+  font-size: 16px;
+  padding: 12px 24px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.buttoncontainer .btn:hover {
+  background-color:grey;
 }
