--- a/SpaceY.css
+++ b/SpaceY.css
@@ -1,325 +1,545 @@
 /* Center the loader */
+
 #loader {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  z-index: 1;
-  width: 180px;
-  height: 180px;
-  margin: -76px 0 0 -76px;
-  background-color: black;
-  border: 16px solid  red;
-  border-radius: 50%;
-  border-top: 16px solid white;
-  -webkit-animation: spin 1s linear infinite;
-  animation: spin 1s linear infinite;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    z-index: 1;
+    width: 180px;
+    height: 180px;
+    margin: -76px 0 0 -76px;
+    background-color: black;
+    border: 16px solid red;
+    border-radius: 50%;
+    border-top: 16px solid white;
+    -webkit-animation: spin 1s linear infinite;
+    animation: spin 1s linear infinite;
 }
 
 @-webkit-keyframes spin {
-  0% { -webkit-transform: rotate(0deg); }
-  100% { -webkit-transform: rotate(360deg); }
+    0% {
+        -webkit-transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+    }
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
+
 /* Add animation to "page content" */
+
 .animate-bottom {
-  position: relative;
-  -webkit-animation-name: animatebottom;
-  -webkit-animation-duration: 0.5s;
-  animation-name: animatebottom;
-  animation-duration: 0.5s
+    position: relative;
+    -webkit-animation-name: animatebottom;
+    -webkit-animation-duration: 0.5s;
+    animation-name: animatebottom;
+    animation-duration: 0.5s
 }
 
 @-webkit-keyframes animatebottom {
-  from { bottom:-100px; opacity:0 } 
-  to { bottom:0px; opacity:1 }
+    from {
+        bottom: -100px;
+        opacity: 0
+    }
+    to {
+        bottom: 0px;
+        opacity: 1
+    }
 }
 
-@keyframes animatebottom { 
-  from{ bottom:-100px; opacity:0 } 
-  to{ bottom:0; opacity:1 }
+@keyframes animatebottom {
+    from {
+        bottom: -100px;
+        opacity: 0
+    }
+    to {
+        bottom: 0;
+        opacity: 1
+    }
 }
 
 #myDiv {
-  display: none;
-  text-align: center;
+    display: none;
+    text-align: center;
 }
 
 
 /* Style the body */
+
 body {
-  margin: 0;
+    margin: 0;
 }
+
 
 /* Style the header */
+
 .header {
-  margin-left: 30px;
-  margin-right:30px;
-  padding: 50px;
-  text-align: left;
-  background: url('images/spaceWalkCrop.png');
+    margin-left: 30px;
+    margin-right: 30px;
+    padding: 50px;
+    text-align: left;
+    background: url('images/spaceWalkCrop.png');
 }
 
-.pageTitle{
-  font-size:50px;
-  float: left;
-  margin-top:-16px;
-  color: white;
-  animation: glow 1s ease-in-out infinite alternate;
+.pageTitle {
+    font-size: 50px;
+    float: left;
+    margin-top: -16px;
+    color: white;
+    animation: glow 1s ease-in-out infinite alternate;
 }
 
 @-webkit-keyframes glow {
-  from {
-    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
-  }
-  
-  to {
-    text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
-  }
+    from {
+        text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
+    }
+    to {
+        text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+    }
 }
+
 
 /* Style the searchbar */
+
 #searchbardiv {
-  float:right;
-  margin-right: 30px;
-  margin-top:15px;
-  padding: 5px;
+    float: right;
+    margin-right: 30px;
+    margin-top: 15px;
+    padding: 5px;
 }
-  #searchbardiv input {
-      height:30px;
-      width:200px;
-      border:none;
-      background-color:#e4e4e4;
-      border-radius: 5px;
-      font-size:0.9em;
-      font-family: Georgia, serif;
-      padding-left:5px;
-      background-image:url("images/magnifyglass.png");
-      background-repeat:no-repeat;
-      background-position:right center;
-  }
+
+#searchbardiv input {
+    height: 30px;
+    width: 200px;
+    border: none;
+    background-color: #e4e4e4;
+    border-radius: 5px;
+    font-size: 0.9em;
+    font-family: Georgia, serif;
+    padding-left: 5px;
+    background-image: url("images/magnifyglass.png");
+    background-repeat: no-repeat;
+    background-position: right center;
+}
+
 ::placeholder {
-  color:black;
-  font-family: Georgia, serif;
-  font-weight:bold;
+    color: black;
+    font-family: Georgia, serif;
+    font-weight: bold;
 }
+
 
 /* Navbar container */
+
 .navbar {
-  overflow: hidden;
-  background-color: black;
-  font-family: Georgia, serif;
-  margin-left: 30px;
-  margin-right:30px;
+    overflow: hidden;
+    background-color: black;
+    font-family: Georgia, serif;
+    margin-left: 30px;
+    margin-right: 30px;
 }
+
 
 /* Links inside the navbar */
+
 .navbar a {
-  float: right;
-  font-size: 16px;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
+    float: right;
+    font-size: 16px;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
 }
+
 
 /* The dropdown container */
+
 .dropdown {
-  float: right;
-  overflow: hidden;
+    float: right;
+    overflow: hidden;
 }
+
 
 /* Dropdown button */
+
 .dropdown .dropbtn {
-  font-size: 16px;
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit; /* Important for vertical align on mobile phones */
-  margin: 0; /* Important for vertical align on mobile phones */
+    font-size: 16px;
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    /* Important for vertical align on mobile phones */
+    margin: 0;
+    /* Important for vertical align on mobile phones */
 }
+
 
 /* Add a red background color to navbar links on hover */
-.navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: rgb(187, 5, 75);
+
+.navbar a:hover,
+.dropdown:hover .dropbtn {
+    background-color: rgb(187, 5, 75);
+    color: white;
+    text-decoration: none;
+    padding: 2px;
 }
+
 
 /* Dropdown content (hidden by default) */
+
 .dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
 }
+
 
 /* Links inside the dropdown */
+
 .dropdown-content a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
 }
+
 
 /* Add a grey background color to dropdown links on hover */
+
 .dropdown-content a:hover {
-  background-color: #ddd;
+    background-color: #ddd;
 }
+
 
 /* Show the dropdown menu on hover */
+
 .dropdown:hover .dropdown-content {
-  display: block;
+    display: block;
 }
+
 
 /* Large Photo-Article Content */
+
 .mainContent {
-  margin-left: 30px;
-  margin-right: 30px;
-  margin-top:15px;
-  background-color: white;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-top: 15px;
+    background-color: white;
 }
+
 
 /* Three columns side by side */
+
 .column {
-  float: right;
-  width: 28.56%;
-  margin-bottom: 16px;
-  margin-top: 16px;
-  margin-left: 30px;
-  margin-right: 30px;
-  padding: 0 0px;
+    float: right;
+    width: 28.56%;
+    margin-bottom: 16px;
+    margin-top: 16px;
+    margin-left: 30px;
+    margin-right: 30px;
+    padding: 0 0px;
 }
+
 
 /* Display the columns below each other instead of side by side on small screens */
+
 @media screen and (max-width: 650px) {
-  .column {
-    width: 100%;
-    display: block;
-  }
+    .column {
+        width: 100%;
+        display: block;
+    }
 }
+
 
 /* Add some shadows to create a card effect */
+
 .card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
+
 
 /* Some left and right padding inside the container */
+
 .container {
-  padding: 0 16px;
+    padding: 0 16px;
 }
 
+
 /* Clear floats */
-.container::after, .row::after {
-  content: "";
-  clear: both;
-  display: table;
+
+.container::after,
+.row::after {
+    content: "";
+    clear: both;
+    display: table;
 }
 
 .title {
-  color: grey;
+    color: grey;
 }
 
 .buyButton {
-  border: none;
-  outline: 0;
-  display: inline-block;
-  padding: 8px;
-  color: white;
-  background-color: #000;
-  text-align: center;
-  cursor: pointer;
-  width: 100%;
+    border: none;
+    outline: 0;
+    display: inline-block;
+    padding: 8px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
 }
 
 .buyButton:hover {
-  background-color: #555;
+    background-color: #555;
 }
+
 
 /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+
 @media screen and (max-width:600px) {
-  .column {
-    width: 100%;
-  }
-}
-
-img:hover {
-  /* Start the shake animation and make the animation last for 0.5 seconds */
-  animation: shake 0.5s;
-
-  /* When the animation is finished, start again */
-  animation-iteration-count: infinite;
+    .column {
+        width: 100%;
+    }
 }
 
 @keyframes shake {
-  0% { transform: translate(1px, 1px) rotate(0deg); }
-  10% { transform: translate(-1px, -2px) rotate(-1deg); }
-  20% { transform: translate(-3px, 0px) rotate(1deg); }
-  30% { transform: translate(3px, 2px) rotate(0deg); }
-  40% { transform: translate(1px, -1px) rotate(1deg); }
-  50% { transform: translate(-1px, 2px) rotate(-1deg); }
-  60% { transform: translate(-3px, 1px) rotate(0deg); }
-  70% { transform: translate(3px, 1px) rotate(-1deg); }
-  80% { transform: translate(-1px, -1px) rotate(1deg); }
-  90% { transform: translate(1px, 2px) rotate(0deg); }
-  100% { transform: translate(1px, -2px) rotate(-1deg); }
+    0% {
+        transform: translate(1px, 1px) rotate(0deg);
+    }
+    10% {
+        transform: translate(-1px, -2px) rotate(-1deg);
+    }
+    20% {
+        transform: translate(-3px, 0px) rotate(1deg);
+    }
+    30% {
+        transform: translate(3px, 2px) rotate(0deg);
+    }
+    40% {
+        transform: translate(1px, -1px) rotate(1deg);
+    }
+    50% {
+        transform: translate(-1px, 2px) rotate(-1deg);
+    }
+    60% {
+        transform: translate(-3px, 1px) rotate(0deg);
+    }
+    70% {
+        transform: translate(3px, 1px) rotate(-1deg);
+    }
+    80% {
+        transform: translate(-1px, -1px) rotate(1deg);
+    }
+    90% {
+        transform: translate(1px, 2px) rotate(0deg);
+    }
+    100% {
+        transform: translate(1px, -2px) rotate(-1deg);
+    }
 }
+
 
 /* Content */
+
 .content {
-  background-color: white;
-  margin-right:30px;
-  margin-left:30px;
-  margin-top:10px;
-  margin-bottom:10px;
+    background-color: white;
+    margin-right: 30px;
+    margin-left: 30px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
-h3 { text-align: left; }
+h3 {
+    text-align: left;
+}
+
 
 /* Container needed to position the button. Adjust the width as needed */
+
 .bigImContainer {
-  position: relative;
-  width: 100%;
+    position: relative;
+    width: 100%;
 }
+
 
 /* Make the image responsive */
+
 .bigImContainer img {
-  height: auto;
-  width:100%;
+    height: auto;
+    width: 100%;
 }
 
+
 /* Style the button and place it in the middle of the container/image */
+
 .bigImContainer .bigImBtn {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  background-color: red;
-  color: white;
-  font-size: 16px;
-  padding: 12px 24px;
-  border: none;
-  cursor: pointer;
-  border-radius: 5px;
+    position: absolute;
+    bottom: 0%;
+    left: 87%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    background-color: #555;
+    color: white;
+    font-size: 16px;
+    padding: 12px 24px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
 }
 
 .bigImContainer .bigImBtn:hover {
-  background-color: black;
+    background-color: grey;
 }
 
+
 /* Add a gray background color and some padding to the footer */
-#FooterFrame {
-  background-color: #f2f2f2;
-  padding: 25px;
-  margin-left: 30px;
-  margin-right: 30px;
+
+.FooterFrame {
+    background-color: #f2f2f2;
+    padding: 25px;
+    margin-left: 30px;
+    margin-right: 30px;
+    display: flex;
 }
+
+.externallinks {
+    flex: 40%;
+}
+
+.links {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
+.links li {
+    display: block;
+}
+
+.links li a {
+    text-decoration: none;
+    color: #000;
+}
+
+.links li a:hover {
+    text-decoration: underline;
+}
+
+.col-sm-10 {
+    flex: 60%;
+}
+
+
+/* Slideshow CSS */
+
+* {
+    box-sizing: border-box
+}
+
+
+/* Slideshow container */
+
+.slideshow-container {
+    max-width: 1000px;
+    position: relative;
+    margin: auto;
+}
+
+
+/* Hide the images by default */
+
+.mySlides {
+    display: none;
+}
+
+
+/* Caption text */
+
+.text {
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
+}
+
+
+/* Number text (1/3 etc) */
+
+.numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+}
+
+
+/* The dots/bullets/indicators */
+
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+.active,
+.dot:hover {
+    background-color: #717171;
+}
+
+
+/* Fading animation */
+
+.fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+    from {
+        opacity: .4
+    }
+    to {
+        opacity: 1
+    }
+}
+
+@keyframes fade {
+    from {
+        opacity: .4
+    }
+    to {
+        opacity: 1
+    }
+}
+
+
+/* end of Slideshow */
